--- a/slide.css
+++ b/slide.css
@@ -6,12 +6,13 @@
 .window{
     width: 1000px;
     height: 300px;
+    overflow: hidden;
 }
 
 .slide{
     /* 하위 속성의 크기는 window에 맞춰서 1000px로 정해질거라 
     1000px크기의 박스 3개를 감싸기 위해 3000px로 설정*/
-    width: 3000px;
+    width: 4000px;
     /* 높이는 항상 같으니 고정 */
     height: 300px;
     /* 우리는 left라는 속성으로 애니메이션을 움직일거라 position을 걸어줌 */
@@ -33,22 +34,30 @@
 }
 
 @keyframes slide{
+    /* 0초에는 가만히 있겠습니다. */
     0%{
         left: 0;
     }
-
+    /* 0초부터 2.3초까지 가만히 한 화면에 고정시킨다는 의미입니다.
+    말 그대로 총 10초의 시간 중 2.3초를 이 첫번째 화면에서 가만히 있겠다는 소리죠. */
     23%{
         left: 0;
     }
 
+    /* 33% = 3.3초에는 왼쪽으로 1000px 이동하겠습니다. */
+    /* 추가설명 : 2.3초부터 3.3초라는 1초의 시간동안 새로운 화면으로 전환하는 코드입니다. */
     33%{
         left: -1000px;
     }
 
+    /* 얘도 마찬가지인데 3.3초부터 5.6초까지 2.3초동안 가만히 
+    두번째 슬라이드에 멈춰있겠다. 라는 의미의 코드네요.
+    아래부터는 설명 생략하겠습니다. 어차피 다 같은 말이거든요.*/
     56%{
         left: -1000px;
     }
 
+    /* 66% = 6.6초에는 왼쪽으로 2000px 이동하겠습니다. */
     66%{
         left: -2000px;
     }
@@ -57,6 +66,7 @@
         left: -2000px;
     }
 
+    /* 100% = 10초에는 왼쪽으로 3000px 이동하겠습니다. */
     100%{
         left: -3000px;
     }
